Convert from Windows to UNIX line endings.

--- a/src/data/field_caution.html
+++ b/src/data/field_caution.html
@@ -1,8 +1,6 @@
-<p> 
-Please respect the following rules for all fields.  Note that some sites also
+<p>Please respect the following rules for all fields.  Note that some sites also
 have additional restrictions listed on that field's page that must also be
-followed.
-</p>
+followed.</p>
 <ul>
   <li>Garbage facilites do not exist at any site.  Do not leave any garbage
       behind when you leave -- even if it isn't yours.  Take extra care to
