--- a/src/data/howto.html
+++ b/src/data/howto.html
@@ -155,7 +155,7 @@ webmaster</a>.</p>
 <p>There are two ways to become part of a team:</p>
 <ol type="a"  style="margin-left: 20pt;">
 	<li><b>Ask to be a member:</b> This is accomplished by logging in and clicking on <b>list teams</b> in the side menu.  You are presented with an alphabetical list of teams.  To see teams whose name starts with a given letter, click on that letter.
-	Once you have found the team you wish to join, click on <b>view</b> and then click <b>join team</b> in the left menu.  The captain will 
+	Once you have found the team you wish to join, click on <b>view</b> and then click <b>join team</b> in the left menu.  Note that this option will only be available if the captain has set the Team Status to "open" instead of "closed".  The captain will 
 	need to confirm you on the team after this.</li>
 	<li><b>Confirm membership request:</b> A captain can add you to his
 	team.  Once he's done that you then have to accept membership on that
