Avoid mention of "tier" in ratings questions

--- a/src/data/rating.html
+++ b/src/data/rating.html
@@ -149,10 +149,10 @@ function doranking() {
 <b>2) How would you describe your throwing skills?</b><br>
 <input type="radio" name="q2" value="-3">just learning, only backhand throw, no forehand</input><br>
 <input type="radio" name="q2" value="-2">can make basic throws, perhaps weaker forehand, some distance and accuracy, nervous when handling the disc</input><br>
-<input type="radio" name="q2" value="-1">basic throws (backhand and forehand), some distance and accuracy, not very consistent, somewhat intimidated when handling the disc, can handle on most lower-tier teams</input><br>
-<input type="radio" name="q2" value="0">good basic throws (backhand and forehand), good distance and accuracy, fairly consistent, relatively comfortable when handling disc, can handle on most lower to mid-tier teams</input><br> 
-<input type="radio" name="q2" value="1">very good basic throws, know some other kinds of throws, very good distance and accuracy, usually consistent quality throws, confident when handling the disc, can handle on most mid to upper-tier teams</input><br>
-<input type="radio" name="q2" value="2">all kinds of throws, excellent distance and accuracy, not prone to errors of judgment, can handle on most top-tier and lower-competitive teams</input><br>
+<input type="radio" name="q2" value="-1">basic throws (backhand and forehand), some distance and accuracy, not very consistent, somewhat intimidated when handling the disc, can handle on most lower-level teams</input><br>
+<input type="radio" name="q2" value="0">good basic throws (backhand and forehand), good distance and accuracy, fairly consistent, relatively comfortable when handling disc, can handle on most lower to mid-level teams</input><br> 
+<input type="radio" name="q2" value="1">very good basic throws, know some other kinds of throws, very good distance and accuracy, usually consistent quality throws, confident when handling the disc, can handle on most mid to upper-level teams</input><br>
+<input type="radio" name="q2" value="2">all kinds of throws, excellent distance and accuracy, not prone to errors of judgment, can handle on most top-level league and lower-competitive teams</input><br>
 <input type="radio" name="q2" value="3">all kinds of throws, very rarely make a bad throw, excellent distance, near perfect accuracy, epitome of reliability, can handle on an elite team (mid-highly competitive team)</input><br>
  
 <br>
@@ -196,10 +196,10 @@ function doranking() {
 
 <br>
 
-<b>7) What is the highest level at which you regularly play at?</b><br>
-<input type="radio" name="q7" value="-2">Mon/Wed Tiers 7-10 or Tue/Thu Tiers 6-10, Fridays, or Winter Open</input><br>
-<input type="radio" name="q7" value="-1">Mon/Wed Tiers 4-6 or Tue/Thu Tiers 2-5, or Winter Open</input><br>
-<input type="radio" name="q7" value="0">Mon/Wed Tiers 1-3, or Tue/Thu Tier 1, or Winter Intermediate</input><br>
+<b>7) What is the highest level at which you regularly play?</b><br>
+<input type="radio" name="q7" value="-2">Summer Mon-Thu team ranked 40th or lower or Summer Fridays</input><br>
+<input type="radio" name="q7" value="-1">Summer Mon/Wed team ranked 25th through 40th, Summer Tue/Thu team ranked 10th through 40th, or indoor rec league</input><br>
+<input type="radio" name="q7" value="0">Summer Mon/Wed team ranked 25th or better, Summer Tue/Thu team ranked 10th or better, or indoor intermediate/advanced</input><br>
 <input type="radio" name="q7" value="1">Competitive Tournament play</input><br>
 <input type="radio" name="q7" value="2">Competitive Nationals play</input><br>
 
