Move css to subdirectory

--- a/src/data/howto.html
+++ b/src/data/howto.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Leaguerunner Online System How To Guide</title>
-	<link rel='stylesheet' href="/leaguerunner/style.css" type="text/css">
+	<link rel='stylesheet' href="/leaguerunner/css/style.css" type="text/css">
 	<style>
 		h2 { text-decoration: underline; }
 		h3 { margin-left: 10pt; }
