--- a/src/data/rating.html
+++ b/src/data/rating.html
@@ -1,9 +1,7 @@
 <html>
   <head>
     <title>Leaguerunner Skill Level Questionnaire</title>
-    <style type="text/css">
-      @import url(../style.css);
-    </style>
+    <link rel='stylesheet' href="/leaguerunner/css/style.css" type="text/css">
     <script language='javascript'>
 
 // function to do the ranking
